# StaffLinuxMonitor

./: .gitignore  API_DOCUMENTATION.md  COMPONENT_DOCUMENTATION.md  COMPREHENSIVE_DOCUMENTATION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE_NOTES.md  RELEASE_NOTES_EN.md  config.toml
.github/workflows/: rust.yml
OS-Build/: staffmon-v1.0.0  system_monitor  system_monitor-v0.1.2
docs/: API.md  API_DOCUMENTATION.md  API_EN.md  API_REFERENCE_EN.md  API_REFERENCE_TR.md  API_TR.md  CONFIGURATION.md  CONFIGURATION_EN.md  CONFIGURATION_TR.md  CONTRIBUTING_EN.md  CONTRIBUTING_TR.md  DEPLOYMENT.md  DEPLOYMENT_EN.md  DEPLOYMENT_TR.md  DEVELOPER_GUIDE.md  DEVELOPER_GUIDE_EN.md  INDEX.md  QUICK_REFERENCE.md  TROUBLESHOOTING.md  TROUBLESHOOTING_EN.md  TROUBLESHOOTING_TR.md
src/: api.rs  config.rs  log_config.rs  main.rs
